# s_media_api

./: .coverage  .gitignore  .pylintrc  Makefile  entrypoint.sh  env.example  pyproject.toml  setup.cfg
django_app/: settings.py  settings_tests.py  urls.py
s_media_proxy/: admin.py  apps.py  catalog_views.py  file_views.py  image_generator.py  models.py  permissions.py  profile_serializer.py  profile_view.py  proxy_view_mixin.py  repository.py  serializers.py  servers_views.py  services.py  storage_views.py  tag_views.py  urls.py  views.py
s_media_proxy/migrations/: 0001_initial.py  0002_server.py
tests/: conftest.py  factories.py  test_auth.py  test_file.py  test_image_generator.py  test_servers.py  test_storages.py  test_tags.py
