[tool.poetry]
name = "s-media-api"
version = "0.1.0"
description = "API intermediary between Front-end and s_media_service"
authors = ["Сергей Сушков <sushkov_sv@ursip.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
djangorestframework-simplejwt = "^5.3.1"
pytest = "^7.4.4"
pytest-django = "^4.7.0"
pytest-factoryboy = "^2.6.0"
django-cors-headers = "^4.3.1"
pytest-cov = "^4.1.0"
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.1.0"
unify = "^0.5"
flake8 = "^7.0.0"
pylint-django = "^2.5.5"
drf-standardized-errors = "^0.12.6"
pillow = "^10.2.0"
numpy = "^1.26.3"
environs = {extras = ["django"], version = "^10.3.0"}
uvicorn = "^0.27.0.post1"
poetry = "^1.7.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization=true
